# hello-word

./: .tekton.yml  Dockerfile  README.md  pipeline.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
k8s/: kubeconfig.yaml  template.yaml  template1.yaml
src/: add_github_secrets.py
src/hello_world/: chroma_main.py  hello_mysql.py  main.py
tests/: test_main.py
