[build-system]
requires = ["setuptools>=61.0", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-python"
version = "0.1.0"
authors = [{name = "zilongshen", email = "luzipeng01@sina.com"}]
description = "A simple Hello World Python application."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]