[build-system]
requires = ["setuptools>=61.0", "build", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "hello-world-pythonbill01"
authors = [{name = "zilongshen", email = "luzipeng01@sina.com"}]
description = "A simple Hello World Python application."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]